# structured-zstd

./: .coderabbit.yaml  .gitignore  .release-plz.toml  BENCHMARKS.md  Cargo.toml  LICENSE  NOTICE  README.md  benchmark-delta.json  benchmark-delta.md  index.html  rust-toolchain.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/bench-dashboard/: index.html
.github/scripts/: merge-benchmarks.py  run-benchmarks.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  progress.rs
dev/bench/: benchmark-delta-summary.md  benchmark-delta.json  benchmark-delta.md  benchmark-relative.json  benchmark-report.md  benchmark-summary.md  data.js  index.html
ruzstd/: Cargo.toml
ruzstd/benches/: compare_ffi.rs
ruzstd/src/decoding/: frame_decoder.rs
ruzstd/src/dictionary/: frequency.rs
ruzstd/src/encoding/: frame_compressor.rs
ruzstd/src/tests/: mod.rs  roundtrip_integrity.rs
ruzstd/tests/: cross_validation.rs
scripts/: bench-flamegraph.sh
zstd/: .gitattributes  CHANGELOG.md  Cargo.toml
zstd/benches/: bitstream.rs  compare_ffi.rs  decode_all.rs  decode_dict_handle.rs  dict_builder_fastcover.rs  huf_decode_kernels.rs  wildcopy_candidates.rs
zstd/benches/support/: mod.rs
zstd/fuzz/: Cargo.toml
zstd/fuzz/fuzz_targets/: decode.rs  encode.rs  fse.rs  huff0.rs  interop.rs
zstd/src/: histogram.rs  lib.rs
zstd/src/bit_io/: bit_reader_reverse.rs  bit_writer.rs  mod.rs
zstd/src/common/: mod.rs
zstd/src/decoding/: block_decoder.rs  decode_buffer.rs  dictionary.rs  errors.rs  frame_decoder.rs  literals_section_decoder.rs  mod.rs  prefetch.rs  ringbuffer.rs  scratch.rs  sequence_execution.rs  sequence_section_decoder.rs  simd_copy.rs  streaming_decoder.rs
zstd/src/dictionary/: cover.rs  fastcover.rs  ffi_builder.rs  frequency.rs  mod.rs
zstd/src/encoding/: frame_compressor.rs  frame_header.rs  incompressible.rs  match_generator.rs  mod.rs  streaming_encoder.rs  util.rs
zstd/src/encoding/blocks/: compressed.rs
zstd/src/encoding/levels/: fastest.rs  mod.rs
zstd/src/fse/: fse_decoder.rs  fse_encoder.rs  mod.rs
zstd/src/huff0/: huff0_decoder.rs  huff0_encoder.rs  mod.rs
zstd/src/tests/: dict_test.rs  mod.rs  roundtrip_integrity.rs
zstd/tests/: cross_validation.rs
