
[package]
name = "structured-zstd-cli"
version = "0.8.2"
publish = false
rust-version = "1.92"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/structured-world/structured-zstd"
repository = "https://github.com/structured-world/structured-zstd"
description = "A command line interface for the `structured-zstd` zstd implementation"
readme = "../README.md"
keywords = ["zstd", "zstandard", "decompression"]
categories = ["compression"]

[dependencies]
# Used for the command line binary only
clap = { version = "4.6.0", features = ["derive"]}
color-eyre = { version = "0.6.5" }
tracing = { version = "0.1.44" }
indicatif = { version = "0.18.4" }
tracing-indicatif = { version = "0.3.14" }
console = { version = "0.16.3" }
tracing-subscriber = { version = "0.3.23" }
# Keep a version requirement for `cargo package` while allowing any 0.0.x fork release.
structured-zstd = { version = "0.0", path = "../zstd", features = ["std"] }

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
zstd = "0.13.3"
